# config-dir-lite-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src/: lib.rs
